# shop

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: main.yml
bot/: keyboard.py  main.py  utils.py
catalog/: admin.py  authentication.py  models.py  serializers.py  services.py  tasks.py  views.py
catalog/management/commands/: bot.py  fakedata.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_orderproduct_order.py  0003_alter_basket_count.py  0004_alter_basket_count.py  0005_alter_basket_count_basket_count.py  0007_alter_order_date_created.py
catalog/tests/: test_catalog_models.py
notes/catalog_admin/: 1_open_admin_panel.sql  2_open_order_page.sql  3_open_order_form.sql  4_create_new_order.sql  logs
notes/catalog_test/: category_test.sql
notes/customer_enpoints/: create_new_row_in_basket.sql
notes/users_registration/: 1_register_user.sql  2_activate_user.sql
shop_project/: celery.py  conftest.py  prospector.yaml  pytest.ini  settings.py  urls.py
shop_project/catalog/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
shop_project/catalog/management/commands/: fakedata.py  getdbdump.py
shop_project/catalog/migrations/: 0006_remove_basket_count_basket_count.py
shop_project/catalog/templates/catalog/: receipt_email.html
shop_project/catalog/tests/: test_catalog_models.py  test_catalog_views.py
shop_project/catalog/tests/fixtures/: catalog_basket.json  catalog_cashback.json  catalog_category.json  catalog_discount.json  catalog_order.json  catalog_orderproduct.json  catalog_producer.json  catalog_product.json  catalog_promocode.json  db_fixture.json  users_customuser.json
shop_project/shop_project/: __init__.py  celery.py  settings.py  urls.py
shop_project/users/: models.py  urls.py
shop_project/users/migrations/: 0002_customuser_is_superuser.py
shop_project/users/tests/: test_users.py
users/: admin.py  models.py  views.py
users/migrations/: 0001_initial.py  0003_alter_customuser_options.py  0004_customuser_discounts_newsletter.py  0005_customuser_tg_chat_id.py
users/tests/: test_users.py
