[tool.poetry]
name = "tms"
version = "0.1.0"
description = ""
authors = ["Alexandr <maximchik.alexandr@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.5"
flask = "^2.2.2"
sqlalchemy = "^2.0.3"
django = "^4.1.7"
requests = "^2.28.2"
xmltodict = "^0.13.0"
python-dotenv = "^1.0.0"
django-seed = "^0.3.1"
djangorestframework = "^3.14.0"
django-environ = "^0.10.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
flake8-bugbear = "^23.1.20"
flake8-builtins = "^2.1.0"
flake8-variables-names = "^0.0.5"
isort = "^5.12.0"
mypy = "^0.991"
pep8-naming = "^0.13.3"
flake8-class-attributes-order = "^0.1.3"
flake8-expression-complexity = "^0.0.11"
flake8-cognitive-complexity = "^0.1.0"
py-spy = "^0.3.14"
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ['E722']
exclude = [".git", "__pycach__", "env", "venv"]
max-line-length = 88
max-complexity = 8

[tool.pylint.messages_control]
max-line-length = 89
disable = [
    "missing-docstring",
    "missing-function-docstring",
    "no-member",
    "no-else-return",
    "too-few-public-methods",
]